major website overhaul, at least for the homepage

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,131 +1,235 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
-
+<html lang="en"> <!--as in english, do you read it-->
+	<!-- the head, unlike that of a human's... or a fish's... or a 
+	cat's... or anything's, is often hidden from view when visiting 
+	websites. why? because it just is. suck it up and deal with it.-->
 	<head>
-	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Aleph's Website</title>
-	<!-- InstanceEndEditable -->
+		<!--SEO metadata.-->
+		<!-- This is what you first see when you search up badbunsen! -->
 
-	<!-- viewport for mobile devices -->
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--this is the title of the page itself.-->
+		<title>aleph's website @ badbunsen.com</title>
+		<!--and here's a longer version.-->
+		<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
 
-	<!-- seo stuff -->
-		<!-- InstanceBeginEditable name="SEOSTUF" -->
-			<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
-	
-			<meta name="description" content="The main homepage for Aleph's Website. Come on in and see the sights or however the saying goes.">
-	
-			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
-	
-			<meta name="robots" content="index, follow">
-	
-			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-			<meta name="language" content="English">
-	
-			<meta name="author" content="Aleph Diallo">
-			
-			<link rel="shortcut icon" href="favicon.ico">
-		<!-- InstanceEndEditable -->	
-	<!-- end seo stuff -->
+		<!--This is where the SEO metatdata really begins... with the 
+		description! This describes what you're about to get yourself 
+		into!-->
+		<meta name="description" 
+		content="This is Aleph Diallo's website, where his art, characters, animations, and webdesign flexes reside. Feel free to look around if you're bored one day, and you don't feel like going on social media. Or if this whole art portfolio thing just interests you.">
+		<!--I have to put it in twice because parsers are very, very 
+		stupid, so they use the page's contents instead. which is bad 
+		because my homepages are a mess sometimes!-->
+		<meta property="og:description" 
+		content="This is Aleph Diallo's website, where his art, characters, animations, and webdesign flexes reside. Feel free to look around if you're bored one day, and you don't feel like going on social media. Or if this whole art portfolio thing just interests you.">
 
-	<link rel="stylesheet" href="/media/styles/main.css">
+		<!--because parsers are stupid, i have to assume you are, too.-->
+		<meta property="og:type" content="website">
 
-	<!-- InstanceBeginEditable name="restofthehead" -->
-	<style>
-	body {
-	background: #000;
-	}
-	</style>
-	<!-- InstanceEndEditable -->
+		<!--this is the name of the site you're on.-->
+		<meta property="og:site_name" content="Aleph's Website">
+
+		<!--assuming unicode is the standard everywhere, and that your 
+		computer supports it.-->
+		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<!--The end of the SEO metadata-->
+
+		<!--Start appearance-related stuff-->
+
+		<!--bleagh-->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!--The file below is what's called a stylesheet. it makes your 
+		website either look pretty or look like it's straight from 
+		geocities... or myspace... or anything fun we've gotten taken 
+		away by shitty social media. whatever, shit happens, we shall 
+		move onto better things. that doesn't include arguing on 
+		twitter.-->
+		<link rel="stylesheet" href="media/styles/main.css">
+
+		<!--The file below comes from FontAwesome, it's for those little 
+		icons next to the navigation links.-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<!--This is the little graphic that appears next to the tab's 
+		title. It's also really important so that people know what site 
+		they're on.-->
+		<link rel="shortcut icon" href="favicon.ico">
+		<!--End appearance-related stuff-->
 	</head>
 
 	<body>
-	
-		<div class="mainbox">
+	<!--a h-card for indieweb-related activities. this shouldn't be 
+	of use when viewing without a parser so it's not a big deal if i 
+	just hide it with good ol' CSS-->
+	<!--want one for your website? go ahead and learn how to make one:
+						https://indieweb.org/h-card
+	-->
+	<div class="h-card">
+			<!--my persona's pfp-->
+			<img class="u-photo" 
+			src="https://badbunsen.com/media/clipart/persona/profile_picture.png" 
+			alt="An image of my persona">
+ 			<!--My name and my website (which you're currently viewing)
+ 			-->
+ 			<a class="p-name u-url" rel="me"
+			href="https://badbunsen.com/" 
+			>Aleph Diallo</a>
+			<!--little note-->
+			<p class="p-note">Cartoonist with a webpage.</p>
+	</div>
+	<!--indieauth uses real social media handles to get people to login
+	to their services. this should also be hidden...-->
+	<div class="indieweb-auth">
+	<a href="https://github.com/badbunsen" rel="me">@badbunsen on Github</a>
+	<!--i'm not active on twitter, like, at all, but it's cool to have 
+	just in case, i guess-->
+  	<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a>
+  	<!--might use youtube someday-->
+  	<a href="https://youtube.com/@badbunsen" rel="me">@badbunsen on YouTube</a>
+  	<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
+	</div>
 
-		<nav>
-		<!-- header (not to be confused with an article header!) -->
-		<div class="header" id="header">
-		
-		<!-- banner -->
-		<picture>
-		<source srcset="/media/sitegrfx/main/thumbwlogo.svg" alt="Aleph's Website Thumbs Up" class="header_img">
-		<img src="/media/sitegrfx/main/thumbwlogo.png" alt="Aleph's Website Thumbs Up" width="2294" height="1669" class="header_img">		</picture>
-		<!-- end banner -->
-		
-		<!-- wordmark for smaller screens -->
-		<picture>
-		<source srcset="/media/logos/aw_wordmark.svg" alt="Aleph's Website" class="header_wordmark">
-		<img src="/media/logos/aw_wordmark.png" alt="Aleph's Website" class="header_wordmark">
-		</picture>
-		
-		<div class="header_links">NAV: <a href="/">HOME</a> <a href="/art/">ART</a> <a href="/archive/videos/">VIDEOS</a> <a href="/games/"></a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
-		<!-- cool line-->
-		<img src="../media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme" alt="Rainbow line... I am mandated by the ADA to put this useless alt tag here">
+	<!--now that that's done with... the site's homepage may begin. however, it 
+	seems to be blank... let's fix that.
+	-->
+
+	<!-- this is the aleph's website watermark, rotated about 90 degrees 
+	clockwise from an axis at (30, 60), or at least that's what the CSS says. 
+	-->
+	<div class="home_wordmark">
+	<!-- "how do you make a background image have an alt tag?!"
+	the answer? magic! complete magic! -->
+	<img src="media/spacers/transparent.gif" 
+	width="512" 
+	height="70.320"
+	alt="Aleph's Website"
+	title="Aleph's Website">
+	</div>
+
+	<!-- now this is where the links go -->
+	<div class="navlinks">
+
+		<!-- link to the portfolio -->
+		<a href="portfolio/"><img src="media/navlinks/portfolio.svg"
+		alt="portfolio"
+		class="anavlink"></a>
+		<br>
+
+		<!-- link to the art subsection of the portfolio -->
+		<a href="portfolio/art"><img src="media/navlinks/art.svg"
+		alt="art"
+		class="anavlink_small"></a>
+		<br>
+
+		<!-- link to the video subsection of the portfolio -->
+		<a href="portfolio/video"><img src="media/navlinks/video.svg"
+		alt="video"
+		class="anavlink_small"></a>
+		<br>
+
+		<!-- link to the downloads -->
+		<a href="downloads"><img src="media/navlinks/downloads.svg"
+		alt="downloads"
+		class="anavlink"></a>
+		<br>
+
+		<!-- link to the about page -->
+		<a href="about"><img src="media/navlinks/about.svg"
+		alt="about"
+		class="anavlink"></a>
+		<br>
+
+		<!-- link to the contact page -->
+		<a href="contact"><img src="media/navlinks/contact.svg"
+		alt="contact"
+		class="anavlink"></a>
+
+	</div>
+
+		<!--little sticky paper that serves as a notepad for me-->
+		<div class="stickynote" id="stickynote">
+
+		<div class="stickynote_titlebar" id="stickynotetitlebar">
+			<!--title of sticky-->
+			<span style="text-align: left;">Sticky Note</span>
+			<!--close button that does what it says on the tin-->
+			<img 
+			src="media/buttons/w95/close.gif"  
+			style="float: right; cursor: pointer;" 
+			onClick="document.getElementById('stickynote').style='display: none'"
+			alt="(X)">
 		</div>
-		<!--end header-->
-		</nav>
 
-		<main>
-		<div class="main">
+		<!--below is the contents of the sticky-->
+		<div class="stickynote_scroll">
+		THIS SITE IS UNDER CONSTRUCTION.<br>
+		THIS SITE IS UNDER CONSTRUCTION.<br>
+		THIS SITE IS UNDER CONSTRUCTION.<br>
+		THIS SITE IS UNDER CONSTRUCTION.<br>
+		THIS SITE IS UNDER CONSTRUCTION.	
+		</div>
 
-		<!-- your content goes here... -->
-		<div class="main_content">
-		<!-- InstanceBeginEditable name="main_content" -->
-		<p>
-		<marquee>In other news, animation is hard, inking is much easier and I just wanna get on with my life.</marquee>
-		</p>
-		<p>What to write, what to write...</p>
-		<!--this should NOT be visible...-->
-		<div class="h-card">
-				<img class="u-photo" src="https://badbunsen.com/media/pagespecific/about/me.png">
- 				<a class="p-name u-url" rel="me"
-					href="https://badbunsen.com/" 
-				>Aleph Diallo</a>
-				<p class="p-note">Yet another guy who draws. Neat!</p>
-		</div>
-		<!-- InstanceEndEditable -->
-		</div>
-		<!-- your content dies here. -->
-		
-		<!-- sideabr -->
-		<div class="main_thebar">
-		<!-- InstanceBeginEditable name="main_thebar" -->
-			<!--relmeauth!-->
-			<h4>Socials!</h4>
-			<p>
-				<a href="https://github.com/badbunsen" rel="me">@BADBUNSEN on Github</a><br>
-  				<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a> (super inactive, don't come here)<br>
-  				<a href="https://youtube.com/@badbunsen" rel="me">Youtube</a> (currently inactive)<br>
-  				<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
-  			</p>
-			</ul>
-		<!-- InstanceEndEditable -->
-		</div>
-		<!-- end sideabr -->
+		<!-- hide stickynote if js is disabled or not detected -->
+		<noscript>
+	    <style>
+	        .stickynote {display:none;}
+	    </style>
+		</noscript>
+
 
 		</div>
-		</main>
 
+		<!-- This is why you may not be able to move, see or close the sticky note, because it needs JavaScript to do so. Sad, I know...-->
+		<script type="text/javascript">
+		//shoutout to w3schools
 
-		<div class="footer">
-		<hr>
+			//Make the DIV element draggagle:
+			dragElement(document.getElementById("stickynote"));
 
-		Copyright &copy; 2022-{YEAR HERE} Aleph Diallo. Some content may be licensed under the Creative Commons.
+			function dragElement(elmnt) {
+			  var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+			  if (document.getElementById(elmnt.id + "header")) {
+			    /* if present, the header is where you move the DIV from:*/
+			    document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+			  } else {
+			    /* otherwise, move the DIV from anywhere inside the DIV:*/
+			    elmnt.onmousedown = dragMouseDown;
+			  }
 
-		<hr>
-		
-		<!--the buttons-->
-		<img src="/media/buttons/aleph8831.gif" alt="Aleph's Website button" class="pixelme">
-		<a href="https://www.archive.org" target="_blank"><img src="/media/buttons/internetarchive.gif" alt="Visit the Internet Archive!" class="pixelme"></a>
-		<img src="/media/buttons/mwm_dw_88x31.gif" alt="Code made with Macromedia Dreamweaver" class="pixelme">
-		<img src="/media/buttons/mwm_fw_88x31.gif" alt="Graphics made with Macromedia Fireworks" class="pixelme">
-		<img src="/media/buttons/made_with_windows.gif" alt="Made with Windows" class="pixelme">
-		<img src="/media/buttons/bestview.gif" alt="Best viewed with open eyes (redundant i know)" class="pixelme">
+			  function dragMouseDown(e) {
+			    e = e || window.event;
+			    e.preventDefault();
+			    // get the mouse cursor position at startup:
+			    pos3 = e.clientX;
+			    pos4 = e.clientY;
+			    document.onmouseup = closeDragElement;
+			    // call a function whenever the cursor moves:
+			    document.onmousemove = elementDrag;
+			  }
 
-		</div>
-		</div>
+			  function elementDrag(e) {
+			    e = e || window.event;
+			    e.preventDefault();
+			    // calculate the new cursor position:
+			    pos1 = pos3 - e.clientX;
+			    pos2 = pos4 - e.clientY;
+			    pos3 = e.clientX;
+			    pos4 = e.clientY;
+			    // set the element's new position:
+			    elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+			    elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+			  }
+
+			  function closeDragElement() {
+			    /* stop moving when mouse button is released:*/
+			    document.onmouseup = null;
+			    document.onmousemove = null;
+			  }
+			}
+		</script>
 
 	</body>
 
-<!-- InstanceEnd --></html>
+</html>
