--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -148,7 +148,7 @@
 
 	</div>
 
-		<!--little sticky paper that serves as a notepad for me-->
+		<!--little sticky paper that serves as a note for pages-->
 		<div class="stickynote" id="stickynote">
 
 		<div class="stickynote_titlebar" id="stickynotetitlebar">
