--- a/sitedir/404.html
+++ b/sitedir/404.html
@@ -53,28 +53,34 @@
 	<!-- "how do you make a background image have an alt tag?!"
 	the answer? magic! complete magic! -->
 	<img src="/media/spacers/transparent.gif" 
-	width="512" 
-	height="70.320"
+	width="70.320" 
+	height="512"
 	alt="Aleph's Website"
 	title="Aleph's Website">
 	</div>
 
 	<div class="content">
 	<h1>404</h1>
-	<p>The requested page was not found on the server.<br>
-	Here's a couple of reasons as to why that might be.</p>
+	<p>The requested page was not found on the server. <a href="/">It might be best to go to the homepage to find what you want.</a><br>
+	Here's a couple of reasons as to why that might be:</p>
 
 	<ul>
 		<li>This site might still be under construction. Come back later!</li>
 		<!-- Check the wayback machine for this stuff, it really works -->
-		<li id="archived">This page might have existed, but it got deleted at some point.</li>
+		<li id="archived">The page might have existed, but it got deleted at some point.</li>
 		<script type="text/javascript">
 		var theURL = window.location.href;
 		var archived = document.getElementById("archived");
 		var archivedURL = "http://web.archive.org/web/*/" + theURL;
 		archived.innerHTML = '<a href="' + archivedURL + '" target="_blank">' + archived.innerHTML + '</a>';
 		</script>
-		<li>This page has likely moved. <a href="/">Check the homepage.</a></li>
+		<li>The page has likely moved. <a href="/">Check the homepage and go from there.</a></li>
+		<li>The page has never existed and probably never will.</li>
+		<li>Hackers from Elbonia took down the page for slandering their name.</li>
+		<li>The page used nothing but Adobe Flash and had to be removed to get with the times.</li>
+		<li>The page was very old and was from a much different era in my life. It would probably still exist here if this were the case, or it'd be archived neatly.</li>
+		<li>The page fucking sucked.</li>
+		<li>The page contained media from Paramount-owned properties.</li>
 	</ul>
 	</div>
 
