--- a/sitedir/404.html
+++ b/sitedir/404.html
@@ -79,7 +79,7 @@
 		var therrURL = "https://rubberocket.com" + window.location.pathname;
 		var archived_rr = document.getElementById("archived_rr");
 		var archived_rr_URL = "http://web.archive.org/web/*/" + therrURL;
-		archived.innerHTML = '<a href="' + archived_rr_URL + '" target="_blank">' + archived.innerHTML + '</a>';
+		archived_rr.innerHTML = '<a href="' + archived_rr_URL + '" target="_blank">' + archived_rr.innerHTML + '</a>';
 		</script>
 		<li>The page has likely moved. <a href="/">Check the homepage and go from there.</a></li>
 		<li>The page has never existed and probably never will.</li>
