--- a/sitedir/404.html
+++ b/sitedir/404.html
@@ -49,7 +49,7 @@
 	<!-- this is the aleph's website watermark, rotated about 90 degrees 
 	clockwise from an axis at (30, 60), or at least that's what the CSS says. 
 	-->
-	<div class="home_wordmark home_wordmark_yellow">
+	<div class="aw_wordmark aw_wordmark_yellow">
 	<!-- "how do you make a background image have an alt tag?!"
 	the answer? magic! complete magic! -->
 	<img src="/media/spacers/transparent.gif" 
