--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -95,10 +95,8 @@
 	seems to be blank... let's fix that.
 	-->
 
-	<!-- this is the aleph's website watermark, rotated about 90 degrees 
-	clockwise from an axis at (30, 60), or at least that's what the CSS says. 
-	-->
-	<div class="home_wordmark">
+	<!--this is the aleph's website watermark, rotated about 90 degrees-->
+	<div class="aw_wordmark">
 	<!-- "how do you make a background image have an alt tag?!"
 	the answer? magic! complete magic! -->
 	<img src="media/spacers/transparent.gif" 
