--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -33,6 +33,9 @@
 		computer supports it.-->
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+		<!--once again, parsers are stupid-->
+		<link rel="canonical" content="https://badbunsen.com/">
 		<!--The end of the SEO metadata-->
 
 		<!--Start appearance-related stuff-->
@@ -162,11 +165,8 @@
 
 		<!--below is the contents of the sticky-->
 		<div class="stickynote_scroll">
-		THIS SITE IS UNDER CONSTRUCTION.<br>
-		THIS SITE IS UNDER CONSTRUCTION.<br>
-		THIS SITE IS UNDER CONSTRUCTION.<br>
-		THIS SITE IS UNDER CONSTRUCTION.<br>
-		THIS SITE IS UNDER CONSTRUCTION.	
+		I'm finished with the about and contact pages, but this website still has yet to be done.<br>
+		However, this current look is my best design yet (in my opinion), so hopefully this won't happen again, right?	
 		</div>
 
 		<!-- hide stickynote if js is disabled or not detected -->
