--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -33,6 +33,9 @@
 		computer supports it.-->
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+		<!--once again, parsers are stupid-->
+		<link rel="canonical" content="https://badbunsen.com/contact">
 		<!--The end of the SEO metadata-->
 
 		<!--Start appearance-related stuff-->
