whoops forgot about that sorrey

--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -84,8 +84,8 @@
 			(<a href="portfolio/art">art</a> | 
 			<a href="portfolio/video">video</a>)
 			:: <a href="downloads">DOWNLOADS</a>
-			:: <strong>ABOUT</strong>
-			:: <a href="contact">CONTACT</a>
+			:: <a href="about">ABOUT</a>
+			:: <strong>CONTACT</strong>
 		</span>
 
 		<!--little cute sketch-->
