--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -111,7 +111,8 @@
 		<h2>Twitter</h2>
 		<p>
 		<img src="media/stupidshit/nah.png" alt="Nah!"><br>
-		<small>(<strike>I mean, <a href="https://x.com/badbunsen" target="_blank">I do have a Twitter account</a>, but I never use it for anything, especially for DMs, so please don't contact me through here.</strike> I tried to update my age, since the account was made before I was 13, but now they think I'm five. At least it gives me one more reason not to go on Twitter... amongst the other 2,000.)</small>
+		<small>(<strike>I mean, <a href="https://x.com/badbunsen" target="_blank">I do have a Twitter account</a>, but I never use it for anything, especially for DMs, so please don't contact me through here.</strike>)</small><br>
+		Ok, so, I tried to update my age, since the account was made before I was 13, but now they think I'm five. AND they want my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy.
 		</p>
 		
 
