--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -111,8 +111,9 @@
 		<h2>Twitter</h2>
 		<p>
 		<img src="media/stupidshit/nah.png" alt="Nah!"><br>
-		<small>(<strike>I mean, <a href="https://x.com/badbunsen" target="_blank">I do have a Twitter account</a>, but I never use it for anything, especially for DMs, so please don't contact me through here.</strike>)</small><br>
-		Ok, so, I tried to update my age, since the account was made before I was 13, and now they've locked it! In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy.
+		I initially added the link to my (inactive) Twitter for future reference, but then I tried to update my age, since the account was made before I was 13 (<strong>KEYWORD: before</strong>), and now they've locked it.<br>
+		In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy for the site where people argue over whether stuff is AI or not, think that the world's gonna end because Trump's gonna do this and that? I care about this stuff, but I shouldn't have to think about this every time I breathe in oxygen.<br>
+		TL:DR, Bluesky is seeming really nice, but I'm just going to stick to this website for now.
 		</p>
 		
 
