--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -112,7 +112,7 @@
 		<p>
 		<img src="media/stupidshit/nah.png" alt="Nah!"><br>
 		I initially added the link to my (inactive) Twitter for future reference, but then I tried to update my age, since the account was made before I was 13 (<strong>KEYWORD: before</strong>), and now they've locked it.<br>
-		In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy for the site where people argue over whether stuff is AI or not, think that the world's gonna end because Trump's gonna do this and that? I care about this stuff, but I shouldn't have to think about this every time I breathe in oxygen.<br>
+		In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy for the site where people argue over politics and procastinate their work? I care about this stuff, but I shouldn't have to think about this every time I breathe in oxygen.<br>
 		<strong>TL:DR</strong>, Bluesky is seeming really nice right now, but I'm just going to stick to this website for the time being. It's the best thing I have.
 		</p>
 		
