--- a/sitedir/about.html
+++ b/sitedir/about.html
@@ -108,7 +108,7 @@
 
 		<h2>Why "BadBunsen"?</h2>
 		<p>
-			A little while after I first got my very own computer, I learned about a little site called DeviantArt, and made my own account to make shitty fanart of Scribblenauts and Drawn to Life. The name of this account? <a href="https://web.archive.org/web/20190423205340/https://www.deviantart.com/badbunsen" target="_blank">BadBunsen</a>, an amagalation of Bunsen from Bunsen is a Beast and <strike>Breaking Bad</strike> the word bad. It's also the name of one of the characters I had at the time.<br>
+			A little while after I first got my very own computer, I learned about a little site called DeviantArt, and made my own account to make shitty fanart of Scribblenauts and Drawn to Life. The name of this account? <a href="https://web.archive.org/web/20190423205340/https://www.deviantart.com/badbunsen" target="_blank">BadBunsen</a>, an amalgamation of Bunsen from Bunsen is a Beast and <strike>Breaking Bad</strike> the word bad. It's also the name of one of the characters I had at the time.<br>
 			BadBunsen would be my online monkier for about a year on numerous websites, from ToonDoo (which shut down from a data breach) to Toonator (which shut down from the discontinuation of Flash Player), and then it died hard when I wanted a username with a WordGirl villain in it. I'd briefly reinstate the BadBunsen name with "BadBunsenIsBack" within the same year that I got rid of it (<a href="https://badbunsenisback.deviantart.com/" target="_blank">it's still up, too!</a>), but that also died hard... this time, with a vengeance.
 		</p>
 		<p>
