we're in the money! we're in the money! we're in the money! we're in the money!

--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -95,6 +95,9 @@
 		style="position:fixed; bottom:0; right: 0;">
 
 		<h1>Contact Me!</h1>
+		<p>
+			Want me to make you a retro-looking Neocities website for you? Maybe a doodle? Do YOU want to try and scam me out of my money? Well, you're in luck, buddy! Welcome to the contacts page!
+		</p>
 
 		<h2>Email address</h2>
 		<p>
@@ -112,7 +115,7 @@
 		<p>
 		<img src="media/stupidshit/nah.png" alt="Nah!"><br>
 		I initially added the link to my (inactive) Twitter for future reference, but then I tried to update my age, since the account was made before I was 13 (<strong>KEYWORD: before</strong>), and now they've locked it.<br>
-		In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy for the site where people argue over politics and procastinate their work? I care about this stuff, but I shouldn't have to think about these things every time I breathe in oxygen. It's not good for the mind...<br>
+		In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy for the site where people argue over shit 24/7? If I wanted to argue, I'd be in a debate club.<br>
 		<strong>TL:DR</strong>, Bluesky is seeming really nice right now, but I'm just going to stick to this website for the time being. It's the best thing I have.
 		</p>
 		
