--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -165,8 +165,7 @@
 
 		<!--below is the contents of the sticky-->
 		<div class="stickynote_scroll">
-		I'm finished with the about and contact pages, but this website still has yet to be done.<br>
-		However, this current look is my best design yet (in my opinion), so hopefully this won't happen again, right?	
+		I'm not interested in people selling me ways to help my website. Maybe sometime in the future, just not now.
 		</div>
 
 		<!-- hide stickynote if js is disabled or not detected -->
