--- a/sitedir/about.html
+++ b/sitedir/about.html
@@ -83,14 +83,19 @@
 			<a href="/">HOME</a>
 			:: <a href="portfolio/">PORTFOLIO</a>
 			(<a href="portfolio/art">art</a> | 
-			<a href="portfolio/video">video</a>)
+			<a href="portfolio/video">video</a> |
+			<a href="portfolio/char">characters</a>)
 			:: <a href="downloads">DOWNLOADS</a>
 			:: <strong>ABOUT</strong>
 			:: <a href="contact">CONTACT</a>
 		</span>
 
+	<article>
+		<header>
 		<h1>About this website</h1>
+		</header>
 
+		<section>
 		<h2>Who are you?</h2>
 		<p>
 			<!-- this is me -->
@@ -98,13 +103,14 @@
 			alt="This is literally me. It's not my persona" title="Persona profile view"
 			width="256" height="256">
 			<!-- this is my persona's profile picture -->
-			<img src="media/clipart/persona/profile_picture.png" 
+			<img src="media/clipart/persona/profile_picture_alt.png" 
 			alt="This is my persona" title="This is my persona"
 			width="256" height="256">
 		</p>
 		<p>I'm Aleph Diallo, known for... um... uh...<br>
 			I'm an aspiring cartoonist who was born in October of 2009, and when I first held a crayon, I began drawing. I haven't stopped since.
 		</p>
+		</section>
 
 		<h2>Why "BadBunsen"?</h2>
 		<p>
@@ -117,7 +123,7 @@
 
 		<h2>What do you like?</h2>
 		<p>
-			<a href="https://www.youtube.com/watch?v=u1KSvuNkZVA" target="_blank">Anything.</a>
+			<a href="https://www.youtube.com/watch?v=u1KSvuNkZVA" target="_blank">Anything.</a>&#10548;
 		</p>
 		<p>
 			Jokes aside, it can be boiled down to a couple of things. Cartoons, animals, rock music and tech.<br>
@@ -126,7 +132,7 @@
 
 		<h2>What do you dislike?</h2>
 		<p>
-			I'm not a GoAnimator or some sort of Scratch user, I'm not just gonna list the stuff I don't like. It's not even much, anyway.
+			Do you honestly have to ask?
 		</p>
 
 		<h2>What tools do you use?</h2>
@@ -139,18 +145,19 @@
 		<h2>When'd you start making websites?</h2>
 		<p>
 			2020, during the pandemic. I got bored and found a website named Glitch. In my "infinite" wisdom I thought "hey, why not make a professional website with this?", and so my indie web journey began without me even knowing it.<br>
-			The websites I made with it were <a href="https://ndurudiallo.glitch.me" target="_blank">a page for my stories</a> (in which none of them make sense) and <a href="https://nduru-chronicles.glitch.me/" target="_blank">a page for a cancelled fanon version of South Park</a>, which seems to be the furthest I've gone to actually make a TV show. Which is sad, considering what the effort was put into.
+			The websites I made with it were <a href="https://ndurudiallo.glitch.me" target="_blank">a page for my stories</a>&#10548; (in which none of them make sense) and <a href="https://nduru-chronicles.glitch.me/" target="_blank">a page for a cancelled fanon version of South Park</a>&#10548;, which seems to be the furthest I've gone to actually make a TV show. Which is sad, considering what the effort was put into.
 		</p>
 
 		<h2>What's your persona supposed to be?!</h2>
 		<p>
-			Guy with a hoary bat for a head. There's no wings because there's the question of "how would they hold a pencil?".
+			Guy with a hoary bat for a head. He's not a <em>bat</em> bat because there's the question of "how would they hold a pencil?".
 		</p>
 
 		<h2>How do I contact you?</h2>
 		<p>
 			Pretty sure there's a link at the top of the screen named contact. Click that!
 		</p>
+	</article>
 
 	</div>
 
