--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -36,6 +36,10 @@
 
 		<!--once again, parsers are stupid-->
 		<link rel="canonical" content="https://badbunsen.com/contact">
+		
+		<!-- keywords -->
+		<meta name="keywords" content="Contact Aleph Diallo, Aleph Diallo, Twitter, Email, Discord, @badbunsen.com, badbunsen.com, contact badbunsen, Aleph">
+
 		<!--The end of the SEO metadata-->
 
 		<!--Start appearance-related stuff-->
@@ -82,8 +86,8 @@
 			<a href="/">HOME</a>
 			:: <a href="portfolio/">PORTFOLIO</a>
 			(<a href="portfolio/art">art</a> | 
-			<a href="portfolio/video">video</a>)
-			:: <a href="downloads">DOWNLOADS</a>
+			<a href="portfolio/video">video</a> |
+			<a href="portfolio/char">characters</a>)
 			:: <a href="about">ABOUT</a>
 			:: <strong>CONTACT</strong>
 		</span>
