--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -36,6 +36,10 @@
 
 		<!--once again, parsers are stupid-->
 		<link rel="canonical" content="https://badbunsen.com/">
+
+		<!-- keywords -->
+		<meta name="keywords" content="BadBunsen, Bad Bunsen, Aleph Diallo, Cartooning, Art, Videos, characters, did i mention cartooning, the blah guy, blah guy, blah, guy, bad, bunsen, Charles Thoburn, DEVILS">
+
 		<!--The end of the SEO metadata-->
 
 		<!--Start appearance-related stuff-->
