--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -88,6 +88,7 @@
 			(<a href="portfolio/art">art</a> | 
 			<a href="portfolio/video">video</a> |
 			<a href="portfolio/char">characters</a>)
+			:: <a href="downloads">DOWNLOADS</a>
 			:: <a href="about">ABOUT</a>
 			:: <strong>CONTACT</strong>
 		</span>
