--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -134,6 +134,12 @@
 		class="anavlink_small"></a>
 		<br>
 
+		<!-- link to the character subsection of the portfolio -->
+		<a href="portfolio/char"><img src="media/navlinks/char.svg"
+		alt="characters"
+		class="anavlink_small"></a>
+		<br>
+
 		<!-- link to the downloads -->
 		<a href="downloads"><img src="media/navlinks/downloads.svg"
 		alt="downloads"
