--- a/sitedir/about.html
+++ b/sitedir/about.html
@@ -157,6 +157,9 @@
 		<p>
 			Pretty sure there's a link at the top of the screen named contact. Click that!
 		</p>
+
+		<h2>Are your works copyrighted?</h2>
+		<p>If most works are copyrighted as soon as they are made, then a majority of my works are copyrighted and owned by me. They're also DMCA protected, so... yeah.</p>
 	</article>
 
 	</div>
