--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -157,6 +157,8 @@
 		alt="contact"
 		class="anavlink"></a>
 
+		<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
+
 	</div>
 
 		<!--little sticky paper that serves as a note for pages-->
