your description here

--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -76,7 +76,8 @@
 	width="70.320" 
 	height="512"
 	alt="Aleph's Website"
-	title="Aleph's Website">
+	title="Aleph's Website"
+	class="aw_wordmark_alt">
 	</div>
 
 	<div class="content">
