--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -110,7 +110,8 @@
 	width="70.320" 
 	height="512"
 	alt="Aleph's Website"
-	title="Aleph's Website">
+	title="Aleph's Website"
+	class="aw_wordmark_alt">
 	</div>
 
 	<!-- now this is where the links go -->
