--- a/sitedir/about.html
+++ b/sitedir/about.html
@@ -24,7 +24,7 @@
 		content="This is Aleph Diallo's website, where his art, characters, animations, and webdesign flexes reside. Feel free to look around if you're bored one day, and you don't feel like going on social media. Or if this whole art portfolio thing just interests you.">
 
 		<!--because parsers are stupid, i have to assume you are, too.-->
-		<meta property="og:type" content="website">
+		<meta property="og:type" content="article">
 
 		<!--this is the name of the site you're on.-->
 		<meta property="og:site_name" content="Aleph's Website">
@@ -113,6 +113,7 @@
 		</p>
 		</section>
 
+		<section>
 		<h2>Why "BadBunsen"?</h2>
 		<p>
 			A little while after I first got my very own computer, I learned about a little site called DeviantArt, and made my own account to make shitty fanart of Scribblenauts and Drawn to Life. The name of this account? <a href="https://web.archive.org/web/20190423205340/https://www.deviantart.com/badbunsen" target="_blank">BadBunsen</a>, an amalgamation of Bunsen from Bunsen is a Beast and <strike>Breaking Bad</strike> the word bad. It's also the name of one of the characters I had at the time.<br>
@@ -121,7 +122,9 @@
 		<p>
 			Fast forward almost a decade later, and I find myself in a bit of a rut. Rubberocket is very hard to spell without ending up at a HugeDomains page, and it's New Year's Eve. I needed something easier to get people to. Turns out BadBunsen is much easier to type, and on top of this it wasn't taken by some domainsquatter. And so, BadBunsen was reborn.
 		</p>
+		</section>
 
+		<section>
 		<h2>What do you like?</h2>
 		<p>
 			<a href="https://www.youtube.com/watch?v=u1KSvuNkZVA" target="_blank">Anything.</a>&#10548;
@@ -130,37 +133,58 @@
 			Jokes aside, it can be boiled down to a couple of things. Cartoons, animals, rock music and tech.<br>
 			If you want something more complex, then I can give you a few examples of what influences my art: Old early-2000s cartoons (including Flash animations), John Kricfalusi <strong>(the art, not the guy's actions)</strong>, Radiohead, Jamie Hewlett, anything that moves, and so on and so forth. Just throw me anything that looks good and I'll probably shove it inside my little cranium and understand that it's a surprise tool that'll help me later.
 		</p>
+		</section>
 
+		<section>
 		<h2>What do you dislike?</h2>
 		<p>
 			Do you honestly have to ask?
 		</p>
+		</section>
 
+		<section>
 		<h2>What tools do you use?</h2>
 		<p>
 			Copy paper (or a sketchbook), pencils (colored or otherwise), and pens. Digitally, it's a 21-inch monitor, Krita, and a pen tablet.<br>
 			If you really want to find out what I use to get the job done, 
 			<a href="https://docs.google.com/document/d/1y2mTav3N-y1CTke0AaaUrxDQh579UFVwBt-Og8iIGkU/edit?usp=sharing" target="_blank">I made a Google Doc containing a list of these things, along with alternatives to these products in case they get <em>REALLY</em> expensive.</a>
 		</p>
+		</section>
 
+		<section>
 		<h2>When'd you start making websites?</h2>
 		<p>
 			2020, during the pandemic. I got bored and found a website named Glitch. In my "infinite" wisdom I thought "hey, why not make a professional website with this?", and so my indie web journey began without me even knowing it.<br>
 			The websites I made with it were <a href="https://ndurudiallo.glitch.me" target="_blank">a page for my stories</a>&#10548; (in which none of them make sense) and <a href="https://nduru-chronicles.glitch.me/" target="_blank">a page for a cancelled fanon version of South Park</a>&#10548;, which seems to be the furthest I've gone to actually make a TV show. Which is sad, considering what the effort was put into.
 		</p>
+		</section>
 
+		<section>
 		<h2>What's your persona supposed to be?!</h2>
 		<p>
 			Guy with a hoary bat for a head. He's not a <em>bat</em> bat because there's the question of "how would they hold a pencil?".
 		</p>
+		</section>
 
+		<section>
 		<h2>How do I contact you?</h2>
 		<p>
 			Pretty sure there's a link at the top of the screen named contact. Click that!
 		</p>
+		</section>
 
+		<section>
 		<h2>Are your works copyrighted?</h2>
-		<p>If most works are copyrighted as soon as they are made, then a majority of my works are copyrighted and owned by me. They're also DMCA protected, so... yeah.</p>
+		<p>
+			If most works are copyrighted as soon as they are made, then a majority of my works are copyrighted and owned by me. They're also DMCA protected, so... yeah.
+		</p>
+		<p>
+			However, this site's code is 
+			<a href="https://github.com/badbunsen/badbunsen.github.io" target="_blank">
+				licensed under the BSD 3-Clause license
+			</a>, so feel free to view it. Just... don't copy the works I put up on there, OK? Make your copy derivative.
+		</p>
+		</section>
 	</article>
 
 	</div>
