--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -120,9 +120,7 @@
 		<h2>Twitter</h2>
 		<p>
 		<img src="media/stupidshit/nah.png" alt="Nah!"><br>
-		I initially added the link to my (inactive) Twitter for future reference, but then I tried to update my age, since the account was made before I was 13 (<strong>KEYWORD: before</strong>), and now they've locked it.<br>
-		In order to get it back, they want me to upload my ID, which, I get why they're doing it, but it's very suspicious. If I barely use Twitter, why bother risking my privacy for the site where people argue over shit 24/7? If I wanted to argue, I'd be in a debate club.<br>
-		<strong>TL:DR</strong>, Bluesky is seeming really nice right now, but I'm just going to stick to this website for the time being. It's the best thing I have.
+		<small>I mean, I might post someday, but it'll only be once in a blue moon.</small>
 		</p>
 		
 
