X let me have it back. All of that complaining for nothing...

--- a/sitedir/contact.html
+++ b/sitedir/contact.html
@@ -120,7 +120,7 @@
 		<h2>Twitter</h2>
 		<p>
 		<img src="media/stupidshit/nah.png" alt="Nah!"><br>
-		<small>I mean, I might post someday, but it'll only be once in a blue moon.</small>
+		<small>I mean, I might post on my Twitter account someday, but it'll only be once in a blue moon.</small>
 		</p>
 		
 
