--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -178,7 +178,7 @@
 
 		<!--below is the contents of the sticky-->
 		<div class="stickynote_scroll">
-		I'm not interested in people selling me ways to help my website. Maybe sometime in the future, just not now.
+			Listening to an old, scratched Stevie Wonder CD on my new portable CD player... wow. This is good.
 		</div>
 
 		<!-- hide stickynote if js is disabled or not detected -->
