update sticky note

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -178,7 +178,7 @@
 
 		<!--below is the contents of the sticky-->
 		<div class="stickynote_scroll">
-			Listening to an old, scratched Stevie Wonder CD on my new portable CD player... wow. This is good.
+			This cheap CD player is the most cromulent music machine I've ever had.
 		</div>
 
 		<!-- hide stickynote if js is disabled or not detected -->
