--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -182,7 +182,7 @@
 
 		<!--below is the contents of the sticky-->
 		<div class="stickynote_scroll">
-			This cheap CD player is the most cromulent music machine I've ever had.
+			Days without the site being done: 7
 		</div>
 
 		<!-- hide stickynote if js is disabled or not detected -->
