update meta, add portfolio and specific art page

--- a/sitedir/404.html
+++ b/sitedir/404.html
@@ -9,7 +9,7 @@
 		some other stuff -->
 
 		<!--this is the title of the page itself.-->
-		<title>aleph's website @ badbunsen.com</title>
+		<title>404 @ badbunsen.com</title>
 
 		<!--this is the name of the site you're on.-->
 		<meta property="og:site_name" content="Aleph's Website">
