--- a/sitedir/about.html
+++ b/sitedir/about.html
@@ -8,20 +8,20 @@
 		<!-- This is what you first see when you search up badbunsen! -->
 
 		<!--this is the title of the page itself.-->
-		<title>aleph's website @ badbunsen.com</title>
+		<title>about aleph's website @ badbunsen.com</title>
 		<!--and here's a longer version.-->
-		<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
+		<meta name="title" content="All about Aleph's Website">
 
 		<!--This is where the SEO metatdata really begins... with the 
 		description! This describes what you're about to get yourself 
 		into!-->
 		<meta name="description" 
-		content="This is Aleph Diallo's website, where his art, characters, animations, and webdesign flexes reside. Feel free to look around if you're bored one day, and you don't feel like going on social media. Or if this whole art portfolio thing just interests you.">
+		content="This is the about section of Aleph's Website, where you can find out pretty much everything about this website.">
 		<!--I have to put it in twice because parsers are very, very 
 		stupid, so they use the page's contents instead. which is bad 
 		because my homepages are a mess sometimes!-->
 		<meta property="og:description" 
-		content="This is Aleph Diallo's website, where his art, characters, animations, and webdesign flexes reside. Feel free to look around if you're bored one day, and you don't feel like going on social media. Or if this whole art portfolio thing just interests you.">
+		content="This is the about section of Aleph's Website, where you can find out pretty much everything about this website.">
 
 		<!--because parsers are stupid, i have to assume you are, too.-->
 		<meta property="og:type" content="article">
@@ -180,7 +180,7 @@
 			However, this site's code is 
 			<a href="https://github.com/badbunsen/badbunsen.github.io" target="_blank">
 				licensed under the BSD 3-Clause license
-			</a>, so feel free to view it. Just... don't copy the works I put up on there, OK? Make your copy derivative.
+			</a>&#10548;, so feel free to view it. Just... don't copy the works I put up on there, most of them have specific licenses that don't equate to the public domain.
 		</p>
 		</section>
 	</article>
