--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -33,8 +33,18 @@ Underneath this scene is a string of text saying Under Construction: Be Patient!
 I'd suggest you take this image's advice.">
 			</p>
 			<p>
-				<strong>Impatient?</strong><br>
+				<strong>Impatient? These dates might have what you're looking for.</strong><br>
 				<a href="archive/2025_01_31/index.html" target="_blank">2025 January 31</a> (left unfinished) :: <a href="archive/2025_01_17/index.html" target="_blank">2025 January 17</a> :: <a href="archive/2024_11_01/index.html" target="_blank">2024 November 01</a>
+			</p>
+			<p>
+				<strong>Can you believe it? It goes even <em>further</em> back!</strong><br>
+				<ul>
+					<a href="archive/2024_03_11/index.html" target="_blank">2024 March 11</a>
+				</ul>
+			</p>
+			<p>
+				<strong>Related stuff</strong><br>
+				<a href="archive/berayah/index.html" target="_blank">Berayah Jones' Official Website</a> (2023-2024)
 			</p>
 		</center>
 		<!--hcard shit-->
