--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="shortcut icon" href="favicon.ico" />
 		<title>
 			Aleph's Website :: Under Construction... AGAIN!
 		</title>
-		<meta name="title" content="Aleph's Website: Cartoons, Animations and... it's under construction!">
-		<meta property="og:site_name" content="Aleph's Website">
+		<meta name="title" content="Aleph's Website: Cartoons, Animations and... it's under construction!" />
+		<meta property="og:site_name" content="Aleph's Website" />
 
 		<meta name="description" 
-		content="This is Aleph Diallo's website, which is currently under construction... it's not like as if it wasn't before but after realizing that it could be even simpler he decided to scrap the whole thing. Anyways, if you continue on in and view the site as it was before this change, you'll find... not much, but at least there's an art page... barely.">
+		content="This is Aleph Diallo's website, which is currently under construction... it's not like as if it wasn't before but after realizing that it could be even simpler he decided to scrap the whole thing. Anyways, if you continue on in and view the site as it was before this change, you'll find... not much, but at least there's an art page... barely." />
 		<meta property="og:description" 
-		content="This is Aleph Diallo's website, which is currently under construction... it's not like as if it wasn't before but after realizing that it could be even simpler he decided to scrap the whole thing. Anyways, if you continue on in and view the site as it was before this change, you'll find... not much, but at least there's an art page... barely.">
-		<meta property="og:type" content="website">
+		content="This is Aleph Diallo's website, which is currently under construction... it's not like as if it wasn't before but after realizing that it could be even simpler he decided to scrap the whole thing. Anyways, if you continue on in and view the site as it was before this change, you'll find... not much, but at least there's an art page... barely." />
+		<meta property="og:type" content="website" />
 
-		<meta charset="utf-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta charset="utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<link rel="canonical" content="https://badbunsen.com/">
 	</head>
@@ -30,7 +30,7 @@ I'd suggest you take this image's advice."
 				title="Below the text saying Aleph's Website, there is a roughly drawn character using a jackhammer to break up the concrete. 
 The sky and ground are both essentially nonexistent, with the missing texture from GoldSrc (yes it's not just source, hell, it's even in Quake, too) used as a placeholder. 
 Underneath this scene is a string of text saying Under Construction: Be Patient! 
-I'd suggest you take this image's advice.">
+I'd suggest you take this image's advice." />
 			</p>
 			<p>
 				<strong>Impatient? These dates might have what you're looking for.</strong><br>
@@ -53,6 +53,20 @@ I'd suggest you take this image's advice.">
 				<strong>Related stuff</strong><br>
 				<a href="archive/berayah/index.html" target="_blank">Berayah Jones' Official Website</a> (2023-2024)<br>
 				<a href="archive/neocities/boredom" target="_blank">Boredom, Inc.</a> (2023)
+			</p>
+			<p>
+				<small>Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
+				Berayah's Website media contents Copyright &copy; 2023-2024 Berayah Jones<br>
+				Site code &copy; Aleph Diallo; Aleph's Website is licensed under the BSD 3-Clause License.<br>
+				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" 
+				title="DMCA.com Protection Status" 
+				class="dmca-badge">
+					<img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" 
+					alt="DMCA.com Protection Status" />
+				</a>  
+				<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
+				</script>
+				</small>
 			</p>
 		</center>
 		<!--hcard follies-->
