update index description

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -9,9 +9,9 @@
 		<meta property="og:site_name" content="Aleph's Website" />
 
 		<meta name="description" 
-		content="This is Aleph Diallo's website, which is currently under construction... it's not like as if it wasn't before but after realizing that it could be even simpler he decided to scrap the whole thing. Anyways, if you continue on in and view the site as it was before this change, you'll find... not much, but at least there's an art page... barely." />
+		content="This is Aleph Diallo's website for his works. As a cartoonist and somewhat of a nerd, he has a deep love for creating websites and drawing tons of interesting things. He decided to combine the two together and create a website that he swore to consistently update: Aleph's Website. Nowadays, he's not so sure about the consistent part." />
 		<meta property="og:description" 
-		content="This is Aleph Diallo's website, which is currently under construction... it's not like as if it wasn't before but after realizing that it could be even simpler he decided to scrap the whole thing. Anyways, if you continue on in and view the site as it was before this change, you'll find... not much, but at least there's an art page... barely." />
+		content="This is Aleph Diallo's website for his works. As a cartoonist and somewhat of a nerd, he has a deep love for creating websites and drawing tons of interesting things. He decided to combine the two together and create a website that he swore to consistently update: Aleph's Website. Nowadays, he's not so sure about the consistent part." />
 		<meta property="og:type" content="website" />
 
 		<meta charset="utf-8" />
