--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -20,43 +20,8 @@
 		<link rel="canonical" content="https://badbunsen.com/">
 	</head>
 	<body>
-		<center><!--totally not deprecated!!!-->
-			<p>
-				<img src="stuff/grafx/sitegrafx/ucstuf/uc_web.jpg"
-				alt="Below the text saying Aleph's Website, there is a roughly drawn character using a jackhammer to break up the concrete. 
-The sky and ground are both essentially nonexistent, with the missing texture from GoldSrc (yes it's not just source, hell, it's even in Quake, too) used as a placeholder. 
-Underneath this scene is a string of text saying Under Construction: Be Patient! 
-I'd suggest you take this image's advice."
-				title="Below the text saying Aleph's Website, there is a roughly drawn character using a jackhammer to break up the concrete. 
-The sky and ground are both essentially nonexistent, with the missing texture from GoldSrc (yes it's not just source, hell, it's even in Quake, too) used as a placeholder. 
-Underneath this scene is a string of text saying Under Construction: Be Patient! 
-I'd suggest you take this image's advice." />
-			</p>
-			<p>
-				<strong>Impatient? These dates might have what you're looking for.</strong><br>
-				<a href="archive/2025_01_31/index.html" target="_blank">2025 January 31</a> (left unfinished) :: <a href="archive/2025_01_17/index.html" target="_blank">2025 January 17</a> :: <a href="archive/2024_11_01/index.html" target="_blank">2024 November 01</a>
-			</p>
-			<p>
-				<strong>Can you believe it? It goes even <em>further</em> back!</strong><br>
-				<ul>
-					<a href="archive/2024_09_20/index.html" target="_blank">2024 September 20</a> 
-					:: <a href="archive/2024_08_30/index.html" target="_blank">2024 August 30</a> 
-					:: <a href="archive/2024_03_11/index.html" target="_blank">2024 March 11</a> 
-					:: <a href="archive/2024_01_30/index.html">2024 January 30</a> 
-					:: <a href="archive/2024_01_12/index.html">2024 January 12</a><br>
-
-					<a href="archive/2023_12_16/home/index.html" target="_blank">2023 December 16</a> 
-					:: <a href="neocities/alephs_website/index.html" target="_blank">2023 September 23</a> 
-					:: <a href="archive/2023_09_16/index.html" target="_blank">2023 September 16</a>
-				</ul>
-			</p>
-			<p>
-				<strong>Related stuff</strong><br>
-				<a href="archive/berayah/index.html" target="_blank">Berayah Jones' Official Website</a> (2023-2024)<br>
-				<a href="archive/neocities/boredom" target="_blank">Boredom, Inc.</a> (2023)
-			</p>
-			<p>
-				<small>Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
+			<p class="copyright">
+				Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
 				Berayah's Website media contents Copyright &copy; 2023-2024 Berayah Jones<br>
 				Site code &copy; Aleph Diallo; Aleph's Website is licensed under the BSD 3-Clause License.<br>
 				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" 
@@ -67,7 +32,6 @@ I'd suggest you take this image's advice." />
 				</a>  
 				<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
 				</script>
-				</small>
 			</p>
 		</center>
 		<!--hcard follies-->
