--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -17,7 +17,9 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-		<link rel="canonical" content="https://badbunsen.com/">
+		<link rel="canonical" href="https://badbunsen.com/" />
+
+		<link rel="stylesheet" href="stuff/stylesheet/main.css" />
 	</head>
 	<body>
 			<p class="copyright">
