forgot this stray end tag

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<link rel="shortcut icon" href="favicon.ico" />
 		<title>
-			Aleph's Website :: Under Construction... AGAIN!
+			Aleph's Website
 		</title>
-		<meta name="title" content="Aleph's Website: Cartoons, Animations and... it's under construction!" />
+		<meta name="title" content="Aleph's Website: Cartoons, animations and more." />
 		<meta property="og:site_name" content="Aleph's Website" />
 
 		<meta name="description" 
@@ -19,7 +19,7 @@
 
 		<link rel="canonical" href="https://badbunsen.com/" />
 
-		<link rel="stylesheet" href="stuff/stylesheet/main.css" />
+		<link rel="stylesheet" href="stuff/stylesheets/main.css" />
 	</head>
 	<body>
 			<p class="copyright">
@@ -35,7 +35,6 @@
 				<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
 				</script>
 			</p>
-		</center>
 		<!--hcard follies-->
 		<div style="display: none;">
 		<div class="h-card">
