--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -22,9 +22,87 @@
 		<link rel="stylesheet" href="stuff/stylesheets/main.css" />
 	</head>
 	<body>
+	
+        <div id="container">
+            <div id="headerArea">
+                <div id="header" style="height: 64px;"></div>
+                <nav id="navbar" style="margin-bottom: 0px;">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Link</a></li>
+                        <li><a href="#">Link</a></li>
+                        <li><a href="#">Link</a></li>
+                        <li><a href="#">Link</a></li>
+                        <li><a href="#">Link</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div id="flex">
+                <aside id="leftSidebar" style="margin-right: 0px;">
+                    <h2>Updates</h2>
+                    <div class="box">
+                        <p>I have recently updated this tool as of August 2022!</p>
+                        <ul style="padding-left:10px;">
+                            <li>Rewrote the JS to generate cleaner code</li>
+                            <li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
+                            <li>Added a couple of new features!</li>
+                            <li>Old version is still available <a href="old.html" target="_blank">here</a></li>
+                        </ul>
+                    </div>
+                    <h2>Hi there!</h2>
+                    <h3>Other Tools</h3>
+                    <ul>
+                        <li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
+                        </li><li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
+                        <li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
+                        <li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
+                        <li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
+                    </ul>
+                </aside>
+                <main>
+                    <h1>Welcome to my Layout Maker!</h1>
+                    <p><strong>Please read this first!</strong></p>
+                    <p>This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns above to customize your layout's general features. Click the button to generate your HTML and CSS, and paste it into a file on Neocities.</p>
+                    <p>Then you can replace all of the text with your own. For more customization, the CSS code has comments to explain what each part changes. Please read through the code - even if you have no idea what it means.</p>
+                    <p>If you're feeling up for a challenge, I put together <a href="/sadgrl/learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which goes over the structure of how this layout is built, along with some specific tips on how to edit it in certain ways.</p>
+                    <p>Check the links in the sidebar for more resources to build your own website!</p>
+
+                    <p> - Cat Ipsum - </p>
+                    <p>Rub my belly hiss swipe at owner's legs sniff catnip and act crazy growl at dogs in my sleep sit on the laptop for hiss at vacuum cleaner i like to spend my days sleeping and eating fishes that my human fished for me.</p>
+
+                    <p>Head nudges eat my own ears. Hey! you there, with the hands why can't i catch that stupid red dot, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff, or roll over and sun my belly curl up and sleep on the freshly laundered towels.</p>
+
+
+                </main>
+                <aside id="rightSidebar" style="margin-left: 0px;">
+                    <h2>Updates</h2>
+                    <div class="box">
+                        <p>I have recently updated this tool as of August 2022!</p>
+                        <ul style="padding-left:10px;">
+                            <li>Rewrote the JS to generate cleaner code</li>
+                            <li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
+                            <li>Added a couple of new features!</li>
+                            <li>Old version is still available <a href="old.html" target="_blank">here</a></li>
+                        </ul>
+                    </div>
+                    <h2>Hi there!</h2>
+                    <h3>Other Tools</h3>
+                    <ul>
+                        <li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
+                        </li><li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
+                        <li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
+                        <li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
+                        <li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
+
+                    </ul>
+                </aside>
+            </div>
+            <footer id="footer" style="margin-top: 0px;">
 			<p class="copyright">
+				<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" alt="Aleph's Website." width="128"><br>
 				Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
-				Berayah's Website media contents Copyright &copy; 2023-2024 Berayah Jones<br>
+				[berjones] media contents Copyright &copy; 2023-2024 Berayah Jones<br>
 				Site code &copy; Aleph Diallo; Aleph's Website is licensed under the BSD 3-Clause License.<br>
 				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" 
 				title="DMCA.com Protection Status" 
@@ -35,6 +113,8 @@
 				<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
 				</script>
 			</p>
+			</footer>
+        </div>
 		<!--hcard follies-->
 		<div style="display: none;">
 		<div class="h-card">
