--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -31,14 +31,17 @@
 			note to aleph: add it back when you make a good banner-->
 			<nav id="navbar" style="margin-bottom: 0px;">
 				<ul>
-					<li><img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" alt="Aleph's Website."
-							height="18"></li>
+					<li>
+					<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg"
+					alt="Aleph's Website."
+					height="18"></a>
+					</li>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
+					<li><a href="#">Artwork</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Videos</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -46,52 +49,20 @@
 		<div id="flex">
 			<aside id="leftSidebar" style="margin-right: 0px;">
 				<h2>Updates</h2>
-				<div class="box">
-					<p>I have recently updated this tool as of August 2022!</p>
-					<ul style="padding-left:10px;">
-						<li>Rewrote the JS to generate cleaner code</li>
-						<li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
-						<li>Added a couple of new features!</li>
-						<li>Old version is still available <a href="old.html" target="_blank">here</a></li>
+				<div class="box scroll box_updates">
+					<h3>2025 February 03</h3>
+					<ul>
+						<li>Major overhaul of everything, and I do mean everything</li>
+						<li>Site's still under construction so there's practically nothing</li>
 					</ul>
 				</div>
-				<h2>Hi there!</h2>
-				<h3>Other Tools</h3>
-				<ul>
-					<li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
-					</li>
-					<li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
-					<li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
-					<li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
-					<li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
-				</ul>
 			</aside>
 			<main>
-				<h1>Welcome to my Layout Maker!</h1>
-				<p><strong>Please read this first!</strong></p>
-				<p>This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns
-					above to customize your layout's general features. Click the button to generate your HTML and CSS,
-					and paste it into a file on Neocities.</p>
-				<p>Then you can replace all of the text with your own. For more customization, the CSS code has comments
-					to explain what each part changes. Please read through the code - even if you have no idea what it
-					means.</p>
-				<p>If you're feeling up for a challenge, I put together <a
-						href="/sadgrl/learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which
-					goes over the structure of how this layout is built, along with some specific tips on how to edit it
-					in certain ways.</p>
-				<p>Check the links in the sidebar for more resources to build your own website!</p>
-
-				<p> - Cat Ipsum - </p>
-				<p>Rub my belly hiss swipe at owner's legs sniff catnip and act crazy growl at dogs in my sleep sit on
-					the laptop for hiss at vacuum cleaner i like to spend my days sleeping and eating fishes that my
-					human fished for me.</p>
-
-				<p>Head nudges eat my own ears. Hey! you there, with the hands why can't i catch that stupid red dot,
-					shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip
-					eat the grass sniff, or roll over and sun my belly curl up and sleep on the freshly laundered
-					towels.</p>
-
-
+				<p>
+				<img src="stuff/grafx/sitegrafx/ucstuf/uc_web.jpg"
+				alt="This website is under construction. Be patient!" /><br>
+				At this rate I'll never be done!
+				</p>
 			</main>
 		</div>
 		<footer id="footer" style="margin-top: 0px;">
